<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/ethio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date" />

        <EditText
            android:id="@+id/day_ethio"
            android:layout_width="70sp"
            android:layout_height="wrap_content"
            android:hint="@string/dd" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slash" />

        <EditText
            android:id="@+id/month_ethio"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:hint="@string/mm" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slash" />

        <EditText
            android:id="@+id/year_ethio"
            android:layout_width="105sp"
            android:layout_height="wrap_content"
            android:hint="@string/yyyy" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/to"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/To" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/Calendar_Type" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date" />

        <EditText
            android:id="@+id/dat_con"
            android:layout_width="285sp"
            android:layout_height="wrap_content"
            android:hint="@string/date" />
    </LinearLayout>

    <Button
        android:id="@+id/convert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/convert" />

</LinearLayout>