<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="#CAE1FF"
        android:textColor="#CD5B45"
        android:text="@string/eventlist" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#CAE1FF"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textColor="#CD5B45"
            android:textSize="12sp" />

        <TextView
            android:layout_width="89dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title"
            android:textColor="#CD5B45"
            android:textSize="12sp" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/startingtime"
            android:textColor="#CD5B45"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/endingTime"
            android:textColor="#CD5B45"
            android:textSize="12sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/event_listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>