<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow_expense_show1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/month" />

            <Spinner
                android:id="@+id/expense_show_monthspin"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_weight="1"
                android:entries="@array/report_month" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow_expense_show2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/date" />

            <Spinner
                android:id="@+id/expense_show_datespin"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_weight="1"
                android:entries="@array/month_31" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow_expense_show3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#345567" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/category" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/amount" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow_expense_show4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/food" />

            <EditText
                android:id="@+id/expense_show_food_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal"
                android:text="@string/zero" >
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow_expense_show5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/transport" />

            <EditText
                android:id="@+id/expense_show_transport_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                android:text="@string/zero" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow_expense_show6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/family" />

            <EditText
                android:id="@+id/expense_show_family_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                android:text="@string/zero" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow_expense_show7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/home" />

            <EditText
                android:id="@+id/expense_show_home_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                android:text="@string/zero" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow_expense_show8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/billing" />

            <EditText
                android:id="@+id/expense_show_billing_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                android:text="@string/zero" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow_expense_show9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/education" />

            <EditText
                android:id="@+id/expense_show_education_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                android:text="@string/zero" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow_expense_show10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/entertainment" />

            <EditText
                android:id="@+id/expense_show_entertainment_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                android:text="@string/zero" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow_expense_show11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/health" />

            <EditText
                android:id="@+id/expense_show_health_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                android:text="@string/zero" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow_expense_show12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/other" />

            <EditText
                android:id="@+id/expense_show_other_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                android:text="@string/zero" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow_expense_show13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#32CD32" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/total"
                android:textColor="#0000CD" />

            <EditText
                android:id="@+id/expense_show_total_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text"
                android:text="@string/zero"
                android:textColor="#0000CD" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow_expense_show14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/expense_show_delete_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Delete" />

            <Button
                android:id="@+id/expense_show_save_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save" />
        </TableRow>
    </TableLayout>

</ScrollView>